fix: add word wrap to prevent long links from breaking page

--- a/themes/waycrate/assets/css/input.css
+++ b/themes/waycrate/assets/css/input.css
@@ -141,6 +141,10 @@ time {
   opacity: 0;
 }
 
+main, p {
+  word-wrap: break-word;
+}
+
 .btn-dark {
   cursor: pointer;
 }
